--- a/wercker.yml
+++ b/wercker.yml
@@ -24,5 +24,5 @@ build:
     - script:
         name: inspect build result
         code: |
-          ls -la otterlibrarydemo/build/outputs/apk
-          cp otterlibrarydemo/build/outputs/apk/*.apk $WERCKER_REPORT_ARTIFACTS_DIR
+          ls -la app/build/outputs/apk
+          cp app/build/outputs/apk/*.apk $WERCKER_REPORT_ARTIFACTS_DIR
